--- a/app/src/main/res/layout/fragment_rid.xml
+++ b/app/src/main/res/layout/fragment_rid.xml
@@ -40,4 +40,19 @@
             app:layout_constraintTop_toBottomOf="@id/editTextRid" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/dataSentStatusTextView"
+        style="@style/AppTextViewStyle"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/transparent_green"
+        android:elevation="12dp"
+        android:padding="8dp"
+        android:textColor="@color/white"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.2"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
