--- a/app/src/main/res/layout/fragment_rid.xml
+++ b/app/src/main/res/layout/fragment_rid.xml
@@ -14,16 +14,17 @@
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/editTextRid"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="52dp"
+            android:layout_marginHorizontal="8dp"
             android:background="@drawable/border_gray"
             android:fontFamily="@font/product_sans_regular"
             android:hint="@string/enter_rid_here"
             android:maxLength="10"
-            android:padding="12dp"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="16dp"
             android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/textViewRid"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,6 +40,32 @@
             app:layout_constraintStart_toStartOf="@id/editTextRid"
             app:layout_constraintTop_toBottomOf="@id/editTextRid" />
 
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/textViewRid"
+            style="@style/AppTextViewStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/border_gray"
+            android:gravity="center_horizontal"
+            android:paddingVertical="15dp"
+            android:text="-"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/editTextRid"
+            app:layout_constraintTop_toTopOf="@+id/editTextRid" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonGetRid"
+            style="@style/PrimaryColoredButton"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:text="@string/get"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@id/textViewRid"
+            app:layout_constraintStart_toStartOf="@id/textViewRid"
+            app:layout_constraintTop_toTopOf="@+id/buttonSetRid" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.textview.MaterialTextView
