--- a/app/src/main/res/layout/fragment_default_log.xml
+++ b/app/src/main/res/layout/fragment_default_log.xml
@@ -18,7 +18,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="@string/default_log"
+            android:text="@string/default_parameter"
             android:textColor="@color/app_primary_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginVertical="8dp"
-            android:text="@string/set_default_log"
+            android:text="@string/factory_default"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@id/textViewToolTip"
             app:layout_constraintStart_toStartOf="@id/textViewToolTip"
